WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159308
REGRESSION(
r202329
): WebInspectorProxy's WKPagePolicyClient callbacks are not being called
https://bugs.webkit.org/show_bug.cgi?id=159308
Summary
REGRESSION(r202329): WebInspectorProxy's WKPagePolicyClient callbacks are not...
Blaze Burg
Reported
2016-06-30 11:51:34 PDT
This causes the pre-filled bug report in the Uncaught Exception reporter to load in the Inspector window. STEPS TO REPRODUCE: 1. Open the Inspector 2. Open the Inspector^2 3. In Inspector^2, evaluate `window.location = "
https://www.apple.com/
"
> The Inspector^1 navigates to apple.com, but this should not happen.
Attachments
Proposed Fix
(9.33 KB, patch)
2016-06-30 13:48 PDT
,
Blaze Burg
thorton
: review+
bburg
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2016-06-30 11:51:49 PDT
<
rdar://problem/27111764
>
Blaze Burg
Comment 2
2016-06-30 13:48:19 PDT
Created
attachment 282463
[details]
Proposed Fix
Blaze Burg
Comment 3
2016-06-30 14:17:31 PDT
Committed
r202700
: <
http://trac.webkit.org/changeset/202700
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug