REGRESSION(r202329): WebInspectorProxy's WKPagePolicyClient callbacks are not being called https://bugs.webkit.org/show_bug.cgi?id=159308 <rdar://problem/27111764>

Reviewed by Tim Horton.

Adopt WKPageNavigationClient and ditch WKPolicyClient and WKPageLoaderClient.
After r202329, it's not possible to set a WKPolicyClient for a WKPage/WebPageProxy that backs a WKWebView.

* UIProcess/WebInspectorProxy.cpp:
(WebKit::isMainOrTestInspectorPage): Take a WebCore::ResourceRequest.
(WebKit::processDidCrash): Deleted.
(WebKit::webProcessDidCrash): Rename to match new client callback name.
(WebKit::decidePolicyForNavigationAction): Rework this to take new argument types.
(WebKit::WebInspectorProxy::eagerlyCreateInspectorPage):
Install a WKPageNavigationClient.

Canonical link: https://commits.webkit.org/177440@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202700 268f45cc-cd09-0410-ab3c-d52691b4dbfc